Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AMPERSANT
    ARRAY
    ASM
    BREAK
    CASE
    CLRSCR
    CONST
    CONSTRUCTOR
    DESTRUCTOR
    DISTINT
    FILE
    FLOAT
    GOTO
    HASHTAG
    IMPLEMENTATION
    IN
    INHERITED
    INLINE
    INTERFACE
    LABEL
    LBLOCK
    LBRACKET
    LONG
    MINUSMINUS
    NIL
    OBJECT
    OF
    OPERATOR
    PACKED
    PLUSPLUS
    RBLOCK
    RBRACKET
    RECORD
    REINTRODUCE
    REPEAT
    SELF
    SET
    SHL
    SHR
    STRING
    TYPE
    UNIT
    UNTIL
    WITH
    WRITE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> header_declaration
Rule 5     declaration -> var_declaration
Rule 6     declaration -> function_declaration
Rule 7     declaration -> procedure_declaration
Rule 8     header_declaration -> PROGRAM ID SEMICOLON
Rule 9     header_declaration -> USES ID header_declaration_3 SEMICOLON
Rule 10    header_declaration_3 -> COMMA ID header_declaration_3
Rule 11    header_declaration_3 -> empty
Rule 12    var_declaration -> VAR var_declaration_2
Rule 13    var_declaration_2 -> ID var_declaration_3 COLON type_specifier SEMICOLON var_declaration_4
Rule 14    var_declaration_3 -> COMMA ID var_declaration_3
Rule 15    var_declaration_3 -> empty
Rule 16    var_declaration_4 -> var_declaration_2
Rule 17    var_declaration_4 -> empty
Rule 18    empty -> <empty>
Rule 19    math -> factor mathi
Rule 20    mathi -> type_op_math factor mathi
Rule 21    mathi -> empty
Rule 22    factor -> LPAREN math RPAREN
Rule 23    factor -> NUMBER
Rule 24    factor -> ID
Rule 25    type_specifier -> INTEGER
Rule 26    type_specifier -> REAL
Rule 27    type_specifier -> CHAR
Rule 28    type_specifier -> BOOLEAN
Rule 29    type_specifier -> DOUBLE
Rule 30    procedure_declaration -> BEGIN instruction END DOT
Rule 31    instruction -> asignation instruction
Rule 32    instruction -> writing instruction
Rule 33    instruction -> cycles instruction
Rule 34    instruction -> callFunctions instruction
Rule 35    instruction -> empty
Rule 36    callFunctions -> ID LPAREN params RPAREN
Rule 37    params -> math params2
Rule 38    params2 -> COMMA math
Rule 39    params2 -> empty
Rule 40    instruction_one_line -> asignation
Rule 41    instruction_one_line -> writing
Rule 42    instruction_one_line -> cycles
Rule 43    id_text_l -> callFunctions COMMA id_text_l
Rule 44    id_text_l -> ID COMMA id_text_l
Rule 45    id_text_l -> empty
Rule 46    id_text_r -> COMMA callFunctions id_text_r
Rule 47    id_text_r -> COMMA ID id_text_r
Rule 48    id_text_r -> empty
Rule 49    writing -> WRITELN LPAREN id_text_l TEXT id_text_r RPAREN SEMICOLON
Rule 50    writing -> WRITELN LPAREN id_num RPAREN SEMICOLON
Rule 51    writing -> READLN LPAREN ID RPAREN SEMICOLON
Rule 52    writing -> READLN LPAREN RPAREN SEMICOLON
Rule 53    writing -> READLN SEMICOLON
Rule 54    writing -> WRITELN SEMICOLON
Rule 55    asignation -> ID EQUAL callFunctions SEMICOLON
Rule 56    asignation -> ID EQUAL math SEMICOLON
Rule 57    asignation -> ID EQUAL boolean SEMICOLON
Rule 58    asignation -> ID EQUAL TEXT SEMICOLON
Rule 59    asignation_for -> ID EQUAL id_num
Rule 60    cycles -> type_cycle
Rule 61    type_cycle -> while
Rule 62    type_cycle -> if
Rule 63    type_cycle -> for
Rule 64    type_cycle -> cycles instruction
Rule 65    while -> WHILE internexpression op_cycle DO otherBegin
Rule 66    if -> IF internexpression op_cycle THEN otherBegin_if
Rule 67    if -> IF internexpression op_cycle THEN instruction_one_line
Rule 68    if -> IF internexpression op_cycle THEN otherBegin_if ELSE otherBegin
Rule 69    if -> IF internexpression op_cycle THEN otherBegin_if ELSE instruction_one_line
Rule 70    if -> IF internexpression op_cycle THEN instruction_one_line ELSE otherBegin
Rule 71    if -> IF internexpression op_cycle THEN instruction_one_line ELSE instruction_one_line
Rule 72    for -> FOR asignation_for TO id_num DO otherBegin
Rule 73    for -> FOR asignation_for DOWNTO id_num DO otherBegin
Rule 74    op_cycle -> op_logic internexpression op_cycle
Rule 75    op_cycle -> empty
Rule 76    internexpression -> parentheses
Rule 77    internexpression -> expression
Rule 78    parentheses -> LPAREN expression RPAREN
Rule 79    expression -> callFunctions
Rule 80    expression -> callFunctions type_op math
Rule 81    expression -> callFunctions type_op callFunctions
Rule 82    expression -> math type_op math
Rule 83    expression -> ID
Rule 84    expression -> math ISEQUAL boolean
Rule 85    expression -> boolean ISEQUAL math
Rule 86    expression -> expression2
Rule 87    expression2 -> TEXT type_op TEXT
Rule 88    expression2 -> TEXT type_op ID
Rule 89    type_op -> LESSEQUAL
Rule 90    type_op -> LESS
Rule 91    type_op -> GREATER
Rule 92    type_op -> GREATEREQUAL
Rule 93    type_op -> DEQUAL
Rule 94    type_op -> ISEQUAL
Rule 95    type_op_math -> PLUS
Rule 96    type_op_math -> MINUS
Rule 97    type_op_math -> TIMES
Rule 98    type_op_math -> DIVIDE
Rule 99    type_op_math -> MOD
Rule 100   op_logic -> AND
Rule 101   op_logic -> OR
Rule 102   op_logic -> XOR
Rule 103   op_logic -> NOT
Rule 104   id_num -> NUMBER
Rule 105   id_num -> ID
Rule 106   boolean -> TRUE
Rule 107   boolean -> FALSE
Rule 108   otherBegin -> BEGIN instruction END SEMICOLON instruction
Rule 109   otherBegin_if -> BEGIN instruction END instruction
Rule 110   Begin_function -> var_declaration BEGIN instruction END SEMICOLON instruction
Rule 111   Begin_function -> BEGIN instruction END SEMICOLON instruction
Rule 112   function_declaration -> FUNCTION ID LPAREN fun_param RPAREN COLON type_specifier SEMICOLON Begin_function
Rule 113   function_declaration -> PROCEDURE ID LPAREN fun_param RPAREN SEMICOLON Begin_function
Rule 114   function_declaration -> PROCEDURE ID SEMICOLON Begin_function
Rule 115   fun_param -> ID fun_param_2 COLON type_specifier fun_param
Rule 116   fun_param -> SEMICOLON ID fun_param_2 COLON type_specifier fun_param
Rule 117   fun_param -> empty
Rule 118   fun_param_2 -> COMMA ID fun_param_2
Rule 119   fun_param_2 -> empty

Terminals, with rules where they appear

ABSOLUTE             : 
AMPERSANT            : 
AND                  : 100
ARRAY                : 
ASM                  : 
BEGIN                : 30 108 109 110 111
BOOLEAN              : 28
BREAK                : 
CASE                 : 
CHAR                 : 27
CLRSCR               : 
COLON                : 13 112 115 116
COMMA                : 10 14 38 43 44 46 47 118
CONST                : 
CONSTRUCTOR          : 
DEQUAL               : 93
DESTRUCTOR           : 
DISTINT              : 
DIVIDE               : 98
DO                   : 65 72 73
DOT                  : 30
DOUBLE               : 29
DOWNTO               : 73
ELSE                 : 68 69 70 71
END                  : 30 108 109 110 111
EQUAL                : 55 56 57 58 59
FALSE                : 107
FILE                 : 
FLOAT                : 
FOR                  : 72 73
FUNCTION             : 112
GOTO                 : 
GREATER              : 91
GREATEREQUAL         : 92
HASHTAG              : 
ID                   : 8 9 10 13 14 24 36 44 47 51 55 56 57 58 59 83 88 105 112 113 114 115 116 118
IF                   : 66 67 68 69 70 71
IMPLEMENTATION       : 
IN                   : 
INHERITED            : 
INLINE               : 
INTEGER              : 25
INTERFACE            : 
ISEQUAL              : 84 85 94
LABEL                : 
LBLOCK               : 
LBRACKET             : 
LESS                 : 90
LESSEQUAL            : 89
LONG                 : 
LPAREN               : 22 36 49 50 51 52 78 112 113
MINUS                : 96
MINUSMINUS           : 
MOD                  : 99
NIL                  : 
NOT                  : 103
NUMBER               : 23 104
OBJECT               : 
OF                   : 
OPERATOR             : 
OR                   : 101
PACKED               : 
PLUS                 : 95
PLUSPLUS             : 
PROCEDURE            : 113 114
PROGRAM              : 8
RBLOCK               : 
RBRACKET             : 
READLN               : 51 52 53
REAL                 : 26
RECORD               : 
REINTRODUCE          : 
REPEAT               : 
RPAREN               : 22 36 49 50 51 52 78 112 113
SELF                 : 
SEMICOLON            : 8 9 13 49 50 51 52 53 54 55 56 57 58 108 110 111 112 113 114 116
SET                  : 
SHL                  : 
SHR                  : 
STRING               : 
TEXT                 : 49 58 87 87 88
THEN                 : 66 67 68 69 70 71
TIMES                : 97
TO                   : 72
TRUE                 : 106
TYPE                 : 
UNIT                 : 
UNTIL                : 
USES                 : 9
VAR                  : 12
WHILE                : 65
WITH                 : 
WRITE                : 
WRITELN              : 49 50 54
XOR                  : 102
error                : 

Nonterminals, with rules where they appear

Begin_function       : 112 113 114
asignation           : 31 40
asignation_for       : 72 73
boolean              : 57 84 85
callFunctions        : 34 43 46 55 79 80 81 81
cycles               : 33 42 64
declaration          : 2 3
declaration_list     : 1 2
empty                : 11 15 17 21 35 39 45 48 75 117 119
expression           : 77 78
expression2          : 86
factor               : 19 20
for                  : 63
fun_param            : 112 113 115 116
fun_param_2          : 115 116 118
function_declaration : 6
header_declaration   : 4
header_declaration_3 : 9 10
id_num               : 50 59 72 73
id_text_l            : 43 44 49
id_text_r            : 46 47 49
if                   : 62
instruction          : 30 31 32 33 34 64 108 108 109 109 110 110 111 111
instruction_one_line : 67 69 70 71 71
internexpression     : 65 66 67 68 69 70 71 74
math                 : 22 37 38 56 80 82 82 84 85
mathi                : 19 20
op_cycle             : 65 66 67 68 69 70 71 74
op_logic             : 74
otherBegin           : 65 68 70 72 73
otherBegin_if        : 66 68 69
params               : 36
params2              : 37
parentheses          : 76
procedure_declaration : 7
program              : 0
type_cycle           : 60
type_op              : 80 81 82 87 88
type_op_math         : 20
type_specifier       : 13 112 115 116
var_declaration      : 5 110
var_declaration_2    : 12 16
var_declaration_3    : 13 14
var_declaration_4    : 13
while                : 61
writing              : 32 41

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . header_declaration
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) header_declaration -> . PROGRAM ID SEMICOLON
    (9) header_declaration -> . USES ID header_declaration_3 SEMICOLON
    (12) var_declaration -> . VAR var_declaration_2
    (112) function_declaration -> . FUNCTION ID LPAREN fun_param RPAREN COLON type_specifier SEMICOLON Begin_function
    (113) function_declaration -> . PROCEDURE ID LPAREN fun_param RPAREN SEMICOLON Begin_function
    (114) function_declaration -> . PROCEDURE ID SEMICOLON Begin_function
    (30) procedure_declaration -> . BEGIN instruction END DOT

    PROGRAM         shift and go to state 8
    USES            shift and go to state 9
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 11
    PROCEDURE       shift and go to state 12
    BEGIN           shift and go to state 13

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    header_declaration             shift and go to state 4
    var_declaration                shift and go to state 5
    function_declaration           shift and go to state 6
    procedure_declaration          shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . header_declaration
    (5) declaration -> . var_declaration
    (6) declaration -> . function_declaration
    (7) declaration -> . procedure_declaration
    (8) header_declaration -> . PROGRAM ID SEMICOLON
    (9) header_declaration -> . USES ID header_declaration_3 SEMICOLON
    (12) var_declaration -> . VAR var_declaration_2
    (112) function_declaration -> . FUNCTION ID LPAREN fun_param RPAREN COLON type_specifier SEMICOLON Begin_function
    (113) function_declaration -> . PROCEDURE ID LPAREN fun_param RPAREN SEMICOLON Begin_function
    (114) function_declaration -> . PROCEDURE ID SEMICOLON Begin_function
    (30) procedure_declaration -> . BEGIN instruction END DOT

    $end            reduce using rule 1 (program -> declaration_list .)
    PROGRAM         shift and go to state 8
    USES            shift and go to state 9
    VAR             shift and go to state 10
    FUNCTION        shift and go to state 11
    PROCEDURE       shift and go to state 12
    BEGIN           shift and go to state 13

    declaration                    shift and go to state 14
    header_declaration             shift and go to state 4
    var_declaration                shift and go to state 5
    function_declaration           shift and go to state 6
    procedure_declaration          shift and go to state 7

state 3

    (3) declaration_list -> declaration .

    PROGRAM         reduce using rule 3 (declaration_list -> declaration .)
    USES            reduce using rule 3 (declaration_list -> declaration .)
    VAR             reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    PROCEDURE       reduce using rule 3 (declaration_list -> declaration .)
    BEGIN           reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> header_declaration .

    PROGRAM         reduce using rule 4 (declaration -> header_declaration .)
    USES            reduce using rule 4 (declaration -> header_declaration .)
    VAR             reduce using rule 4 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> header_declaration .)
    PROCEDURE       reduce using rule 4 (declaration -> header_declaration .)
    BEGIN           reduce using rule 4 (declaration -> header_declaration .)
    $end            reduce using rule 4 (declaration -> header_declaration .)


state 5

    (5) declaration -> var_declaration .

    PROGRAM         reduce using rule 5 (declaration -> var_declaration .)
    USES            reduce using rule 5 (declaration -> var_declaration .)
    VAR             reduce using rule 5 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 5 (declaration -> var_declaration .)
    BEGIN           reduce using rule 5 (declaration -> var_declaration .)
    $end            reduce using rule 5 (declaration -> var_declaration .)


state 6

    (6) declaration -> function_declaration .

    PROGRAM         reduce using rule 6 (declaration -> function_declaration .)
    USES            reduce using rule 6 (declaration -> function_declaration .)
    VAR             reduce using rule 6 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> function_declaration .)
    PROCEDURE       reduce using rule 6 (declaration -> function_declaration .)
    BEGIN           reduce using rule 6 (declaration -> function_declaration .)
    $end            reduce using rule 6 (declaration -> function_declaration .)


state 7

    (7) declaration -> procedure_declaration .

    PROGRAM         reduce using rule 7 (declaration -> procedure_declaration .)
    USES            reduce using rule 7 (declaration -> procedure_declaration .)
    VAR             reduce using rule 7 (declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> procedure_declaration .)
    BEGIN           reduce using rule 7 (declaration -> procedure_declaration .)
    $end            reduce using rule 7 (declaration -> procedure_declaration .)


state 8

    (8) header_declaration -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 15


state 9

    (9) header_declaration -> USES . ID header_declaration_3 SEMICOLON

    ID              shift and go to state 16


state 10

    (12) var_declaration -> VAR . var_declaration_2
    (13) var_declaration_2 -> . ID var_declaration_3 COLON type_specifier SEMICOLON var_declaration_4

    ID              shift and go to state 18

    var_declaration_2              shift and go to state 17

state 11

    (112) function_declaration -> FUNCTION . ID LPAREN fun_param RPAREN COLON type_specifier SEMICOLON Begin_function

    ID              shift and go to state 19


state 12

    (113) function_declaration -> PROCEDURE . ID LPAREN fun_param RPAREN SEMICOLON Begin_function
    (114) function_declaration -> PROCEDURE . ID SEMICOLON Begin_function

    ID              shift and go to state 20


state 13

    (30) procedure_declaration -> BEGIN . instruction END DOT
    (31) instruction -> . asignation instruction
    (32) instruction -> . writing instruction
    (33) instruction -> . cycles instruction
    (34) instruction -> . callFunctions instruction
    (35) instruction -> . empty
    (55) asignation -> . ID EQUAL callFunctions SEMICOLON
    (56) asignation -> . ID EQUAL math SEMICOLON
    (57) asignation -> . ID EQUAL boolean SEMICOLON
    (58) asignation -> . ID EQUAL TEXT SEMICOLON
    (49) writing -> . WRITELN LPAREN id_text_l TEXT id_text_r RPAREN SEMICOLON
    (50) writing -> . WRITELN LPAREN id_num RPAREN SEMICOLON
    (51) writing -> . READLN LPAREN ID RPAREN SEMICOLON
    (52) writing -> . READLN LPAREN RPAREN SEMICOLON
    (53) writing -> . READLN SEMICOLON
    (54) writing -> . WRITELN SEMICOLON
    (60) cycles -> . type_cycle
    (36) callFunctions -> . ID LPAREN params RPAREN
    (18) empty -> .
    (61) type_cycle -> . while
    (62) type_cycle -> . if
    (63) type_cycle -> . for
    (64) type_cycle -> . cycles instruction
    (65) while -> . WHILE internexpression op_cycle DO otherBegin
    (66) if -> . IF internexpression op_cycle THEN otherBegin_if
    (67) if -> . IF internexpression op_cycle THEN instruction_one_line
    (68) if -> . IF internexpression op_cycle THEN otherBegin_if ELSE otherBegin
    (69) if -> . IF internexpression op_cycle THEN otherBegin_if ELSE instruction_one_line
    (70) if -> . IF internexpression op_cycle THEN instruction_one_line ELSE otherBegin
    (71) if -> . IF internexpression op_cycle THEN instruction_one_line ELSE instruction_one_line
    (72) for -> . FOR asignation_for TO id_num DO otherBegin
    (73) for -> . FOR asignation_for DOWNTO id_num DO otherBegin

    ID              shift and go to state 27
    WRITELN         shift and go to state 28
    READLN          shift and go to state 29
    END             reduce using rule 18 (empty -> .)
    WHILE           shift and go to state 34
    IF              shift and go to state 35
    FOR             shift and go to state 36

    instruction                    shift and go to state 21
    asignation                     shift and go to state 22
    writing                        shift and go to state 23
    cycles                         shift and go to state 24
    callFunctions                  shift and go to state 25
    empty                          shift and go to state 26
    type_cycle                     shift and go to state 30
    while                          shift and go to state 31
    if                             shift and go to state 32
    for                            shift and go to state 33

state 14

    (2) declaration_list -> declaration_list declaration .

    PROGRAM         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    USES            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VAR             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FUNCTION        reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PROCEDURE       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BEGIN           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 15

    (8) header_declaration -> PROGRAM ID . SEMICOLON

    SEMICOLON       shift and go to state 37


state 16

    (9) header_declaration -> USES ID . header_declaration_3 SEMICOLON
    (10) header_declaration_3 -> . COMMA ID header_declaration_3
    (11) header_declaration_3 -> . empty
    (18) empty -> .

    COMMA           shift and go to state 39
    SEMICOLON       reduce using rule 18 (empty -> .)

    header_declaration_3           shift and go to state 38
    empty                          shift and go to state 40

state 17

    (12) var_declaration -> VAR var_declaration_2 .

    PROGRAM         reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    USES            reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    VAR             reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    FUNCTION        reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    PROCEDURE       reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    BEGIN           reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)
    $end            reduce using rule 12 (var_declaration -> VAR var_declaration_2 .)


state 18

    (13) var_declaration_2 -> ID . var_declaration_3 COLON type_specifier SEMICOLON var_declaration_4
    (14) var_declaration_3 -> . COMMA ID var_declaration_3
    (15) var_declaration_3 -> . empty
    (18) empty -> .

    COMMA           shift and go to state 42
    COLON           reduce using rule 18 (empty -> .)

    var_declaration_3              shift and go to state 41
    empty                          shift and go to state 43

state 19

    (112) function_declaration -> FUNCTION ID . LPAREN fun_param RPAREN COLON type_specifier SEMICOLON Begin_function

    LPAREN          shift and go to state 44


state 20

    (113) function_declaration -> PROCEDURE ID . LPAREN fun_param RPAREN SEMICOLON Begin_function
    (114) function_declaration -> PROCEDURE ID . SEMICOLON Begin_function

    LPAREN          shift and go to state 45
    SEMICOLON       shift and go to state 46


state 21

    (30) procedure_declaration -> BEGIN instruction . END DOT

    END             shift and go to state 47


state 22

    (31) instruction -> asignation . instruction
    (31) instruction -> . asignation instruction
    (32) instruction -> . writing instruction
    (33) instruction -> . cycles instruction
    (34) instruction -> . callFunctions instruction
    (35) instruction -> . empty
    (55) asignation -> . ID EQUAL callFunctions SEMICOLON
    (56) asignation -> . ID EQUAL math SEMICOLON
    (57) asignation -> . ID EQUAL boolean SEMICOLON
    (58) asignation -> . ID EQUAL TEXT SEMICOLON
    (49) writing -> . WRITELN LPAREN id_text_l TEXT id_text_r RPAREN SEMICOLON
    (50) writing -> . WRITELN LPAREN id_num RPAREN SEMICOLON
    (51) writing -> . READLN LPAREN ID RPAREN SEMICOLON
    (52) writing -> . READLN LPAREN RPAREN SEMICOLON
    (53) writing -> . READLN SEMICOLON
    (54) writing -> . WRITELN SEMICOLON
    (60) cycles -> . type_cycle
    (36) callFunctions -> . ID LPAREN params RPAREN
    (18) empty -> .
    (61) type_cycle -> . while
    (62) type_cycle -> . if
    (63) type_cycle -> . for
    (64) type_cycle -> . cycles instruction
    (65) while -> . WHILE internexpression op_cycle DO otherBegin
    (66) if -> . IF internexpression op_cycle THEN otherBegin_if
    (67) if -> . IF internexpression op_cycle THEN instruction_one_line
    (68) if -> . IF internexpression op_cycle THEN otherBegin_if ELSE otherBegin
    (69) if -> . IF internexpression op_cycle THEN otherBegin_if ELSE instruction_one_line
    (70) if -> . IF internexpression op_cycle THEN instruction_one_line ELSE otherBegin
    (71) if -> . IF internexpression op_cycle THEN instruction_one_line ELSE instruction_one_line
    (72) for -> . FOR asignation_for TO id_num DO otherBegin
    (73) for -> . FOR asignation_for DOWNTO id_num DO otherBegin

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for READLN resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    ID              shift and go to state 27
    WRITELN         shift and go to state 28
    READLN          shift and go to state 29
    END             reduce using rule 18 (empty -> .)
    ELSE            reduce using rule 18 (empty -> .)
    PROGRAM         reduce using rule 18 (empty -> .)
    USES            reduce using rule 18 (empty -> .)
    VAR             reduce using rule 18 (empty -> .)
    FUNCTION        reduce using rule 18 (empty -> .)
    PROCEDURE       reduce using rule 18 (empty -> .)
    BEGIN           reduce using rule 18 (empty -> .)
